Transform into personal bioinformatics documentation site
- Update branding to "Ian's Docs" with blue/teal color scheme
- Add 5 navigation tabs: Welcome, HPC, Protein Engineering, Genomics, Misc. Bioinformatics
- Create placeholder pages for each documentation section
- Add circular favicon from personal photo
- Remove Mintlify starter template content

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,31 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: Welcome
+description: Personal documentation for bioinformatics, HPC, and computational biology workflows
 ---
 
-## Setting up
+# Welcome to Ian's Docs
 
-Get your documentation site up and running in minutes.
+This is my personal documentation site where I document bioinformatics workflows, HPC tips, and computational biology tools that I've found useful in my work.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## Browse by Topic
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+<CardGroup cols={2}>
+  <Card title="High Performance Computing" icon="server" href="/hpc/index">
+    Workflows, tools, and tips for working with HPC clusters
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Protein Engineering" icon="dna" href="/protein-engineering/index">
+    Protein structure prediction, design, and analysis tools
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="Genomics" icon="microscope" href="/genomics/index">
+    Pipelines and analysis workflows for genomics data
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+  <Card title="Misc. Bioinformatics" icon="flask" href="/misc-bioinfo/index">
+    Other bioinformatics topics and useful tools
   </Card>
-</Columns>
+</CardGroup>
 
-## Create beautiful pages
+## About This Site
 
-Everything you need to create world-class documentation.
+This documentation is a living collection of notes, workflows, and tutorials that I've written for myself and others. The goal is to have a single place where I can reference common tasks and share knowledge with collaborators.
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+If you find something useful or have suggestions, feel free to reach out!
