--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Welcome
 description: Personal documentation for bioinformatics, HPC, and computational biology workflows
+mode: wide
 ---
 
 # Welcome to Ian's Docs
