Use center mode for welcome page layout

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Welcome
 description: Personal documentation for bioinformatics, HPC, and computational biology workflows
-mode: wide
+mode: center
 ---
 
 # Welcome to Ian's Docs
