Update About section on welcome page
- Rename section from "About This Site" to "About These Docs"
- Add personal context about tutorials written throughout career
- Expand audience to include friends and broader scientific community
- Add link to personal website for contact

--- a/index.mdx
+++ b/index.mdx
@@ -25,8 +25,8 @@ This is my personal documentation site where I document bioinformatics workflows
   </Card>
 </CardGroup>
 
-## About This Site
+## About These Docs
 
-This documentation is a living collection of notes, workflows, and tutorials that I've written for myself and others. The goal is to have a single place where I can reference common tasks and share knowledge with collaborators.
+This documentation is a living collection of notes, workflows, and tutorials that I've written for myself and others throughout my career. The goal is to have a single place where I can reference common tasks and share knowledge with my friends, collaborators, and the broader scientific community.
 
-If you find something useful or have suggestions, feel free to reach out!
+If you find something useful or have suggestions, please reach out at any of my socials found on [my website](https://www.ianwashere.com/)!
