Simplify welcome text and nest UC Davis under HPC group

--- a/index.mdx
+++ b/index.mdx
@@ -6,7 +6,7 @@ mode: center
 
 # Welcome to Ian's Docs
 
-This is my personal documentation site where I document bioinformatics workflows, HPC tips, and computational biology tools that I've found useful in my work.
+This is my personal documentation repository.
 
 ## Browse by Topic
 
