Add UC Davis HPC card to HPC landing page

--- a/hpc/index.mdx
+++ b/hpc/index.mdx
@@ -11,6 +11,9 @@ This section covers workflows, tools, and best practices for working with high-p
   <Card title="Getting Started" icon="rocket" href="/hpc/getting-started">
     Basic setup and first steps with HPC
   </Card>
+  <Card title="HPC at UC Davis" icon="building-columns" href="/hpc/uc-davis/index">
+    Setup and usage for UC Davis HPC
+  </Card>
 </CardGroup>
 
 ## What's Covered
