Rename HIVE page to Setting Up Your HIVE Account and remove redundant header

--- a/hpc/uc-davis/getting-started-hive.mdx
+++ b/hpc/uc-davis/getting-started-hive.mdx
@@ -1,11 +1,7 @@
 ---
-title: Getting Started with HIVE
+title: Setting Up Your HIVE Account
 description: Create your HIVE account and configure SSH access for the UC Davis HPC cluster
 ---
-
-# Getting Started with HIVE
-
-This guide walks you through creating a HIVE account and setting up SSH key authentication.
 
 ## Prerequisites
 
