--- a/hpc/uc-davis/index.mdx
+++ b/hpc/uc-davis/index.mdx
@@ -8,7 +8,7 @@ description: Resources and guides for using high-performance computing clusters 
 This section covers the HPC resources available at UC Davis, including setup guides and best practices for the HIVE cluster.
 
 <CardGroup cols={2}>
-  <Card title="Getting Started with HIVE" icon="server" href="/hpc/uc-davis/getting-started-hive">
+  <Card title="Setting Up Your HIVE Account" icon="server" href="/hpc/uc-davis/getting-started-hive">
     Create your HIVE account and set up SSH access
   </Card>
 </CardGroup>
