Improve HIVE documentation clarity and add important warnings
- Remove redundant headings and verbose intro text
- Fix Open OnDemand URL to correct ondemand.hive subdomain
- Remove fairshare mentions (not actively used on HIVE)
- Expand interactive sessions with head node warning and shell aliases
- Add Quobyte concurrent write bug warning with workarounds

--- a/hpc/uc-davis/using-hive/index.mdx
+++ b/hpc/uc-davis/using-hive/index.mdx
@@ -1,12 +1,10 @@
 ---
 title: Using HIVE
-description: Comprehensive guide to using the HIVE HPC cluster at UC Davis
+description: Running jobs on the HIVE cluster
 ---
 
-The HIVE cluster is UC Davis's primary high-performance computing resource, managed by the High-Performance Computing Core Facility (HPCCF). This guide covers everything you need to start running jobs on HIVE.
-
 <Note>
-  Before using HIVE, you'll need to set up your account. See [Setting Up Your HIVE Account](/hpc/uc-davis/getting-started-hive) if you haven't done so.
+  Need an account first? See [Setting Up Your HIVE Account](/hpc/uc-davis/getting-started-hive).
 </Note>
 
 ## Cluster Overview
@@ -23,8 +21,6 @@ The HIVE cluster is UC Davis's primary high-performance computing resource, mana
 | **Interconnect** | InfiniBand |
 | **Scheduler** | SLURM with Backfill and Multifactor Priority |
 
-The cluster uses a **fair-share scheduling system** where job priority is influenced by past usage and account allocation.
-
 ## Connecting to HIVE
 
 <Tabs>
@@ -40,7 +36,7 @@ The cluster uses a **fair-share scheduling system** where job priority is influe
   <Tab title="Open OnDemand">
     Access the cluster through a web browser with Jupyter, RStudio, file browser, and terminal:
 
-    **URL:** [https://hive.hpc.ucdavis.edu/](https://hive.hpc.ucdavis.edu/)
+    **URL:** [https://ondemand.hive.hpc.ucdavis.edu](https://ondemand.hive.hpc.ucdavis.edu/pun/sys/dashboard)
 
     <Warning>
       Requires UC Davis VPN or campus network connection.
