Update HIVE docs with lab culture notes and fix VPN info
- Remove incorrect VPN requirement for Open OnDemand
- Add tip about asking lab members for help (lab culture)
- Add note about asking Ian directly for complex issues

--- a/hpc/uc-davis/using-hive/siegel-lab.mdx
+++ b/hpc/uc-davis/using-hive/siegel-lab.mdx
@@ -172,6 +172,10 @@ Since the lab has limited concurrent CPU allocation (128 CPUs max), being effici
 - **Siegel Lab Discord:** Ask in the drylab channel
 - **Lab members:** Don't hesitate to ask more experienced members
 
+<Tip>
+  We're a very independent lab, which means getting help from other members is really important. ChatGPT and Claude are great, but they don't know the exact inner workings of HIVE. It can feel hard or annoying to ask people for help, but it's genuinely part of the lab culture and will help you in the long run.
+</Tip>
+
 ### Cluster Support
 
 - **HPCCF Documentation:** [https://hpc.ucdavis.edu/](https://hpc.ucdavis.edu/)
@@ -179,5 +183,5 @@ Since the lab has limited concurrent CPU allocation (128 CPUs max), being effici
 - **DataLab Office Hours:** Check the [DataLab website](https://datalab.ucdavis.edu/) for schedule
 
 <Tip>
-  For cluster-specific issues, check if the answer is in the documentation or easily searchable first. For more complex problems, don't hesitate to ask for help—that's what the support resources are for.
+  You can also ask Ian directly—he's happy to help with anything beyond the basics. That said, if it's something you could have easily Googled, it will make him sad. For more complex problems, don't hesitate to reach out.
 </Tip>
