--- a/hpc/uc-davis/using-hive/siegel-lab.mdx
+++ b/hpc/uc-davis/using-hive/siegel-lab.mdx
@@ -183,5 +183,5 @@ Since the lab has limited concurrent CPU allocation (128 CPUs max), being effici
 - **DataLab Office Hours:** Check the [DataLab website](https://datalab.ucdavis.edu/) for schedule
 
 <Tip>
-  You can also ask Ian directly—he's happy to help with anything beyond the basics. That said, if it's something you could have easily Googled, it will make him sad. For more complex problems, don't hesitate to reach out.
+  You can also ask me (Ian) directly—I'm happy to help with anything beyond the VERY basics. That said, if it's something you could have easily Googled, it will make me sad. For more complex problems, don't hesitate to reach out.
 </Tip>
