Update HPC docs: fix publicgrp GPU access and reorganize content
- Fix Siegel Lab guide: publicgrp must use low partition for GPUs,
  cannot access gpu-a100 partition. Document A100/A6000 GPU selection.
- Extract general job submission content to /hpc/job-submission.mdx
- Simplify HIVE job-submission page to focus on HIVE-specific examples
- Remove redundant intro text from UC Davis HPC index
- Update cross-references to point to new general guide

--- a/hpc/common-pitfalls.mdx
+++ b/hpc/common-pitfalls.mdx
@@ -18,7 +18,7 @@ The login node is shared by everyone. When you run heavy computation there, it s
 - You're running something that uses a lot of CPU or memory
 - Cluster admins send you sad emails
 
-**Solution:** Use [interactive sessions](/hpc/uc-davis/using-hive/job-submission#interactive-sessions) or submit batch jobs.
+**Solution:** Use [interactive sessions](/hpc/job-submission#interactive-sessions) or submit batch jobs.
 
 ## Memory Issues
 
