--- a/hpc/index.mdx
+++ b/hpc/index.mdx
@@ -8,6 +8,9 @@ This section covers workflows, tools, and best practices for working with high-p
 ## General Guides
 
 <CardGroup cols={2}>
+  <Card title="Job Submission Basics" icon="play" href="/hpc/job-submission">
+    SLURM fundamentals: commands, scripts, resource requests
+  </Card>
   <Card title="Data Transfer" icon="upload" href="/hpc/data-transfer">
     Moving files to and from clusters (scp, rsync, GUI tools)
   </Card>
