Use ianpan as example SUNet ID in Sherlock docs

--- a/hpc/stanford/getting-started-sherlock.mdx
+++ b/hpc/stanford/getting-started-sherlock.mdx
@@ -32,10 +32,10 @@ Once your account is approved, you can connect via SSH. Unlike some clusters, Sh
     Connect from your terminal:
 
     ```bash
-    ssh YOUR_SUNETID@login.sherlock.stanford.edu
+    ssh ianpan@login.sherlock.stanford.edu
     ```
 
-    Replace `YOUR_SUNETID` with your Stanford SUNet ID.
+    Replace `ianpan` with your Stanford SUNet ID.
   </Tab>
   <Tab title="OnDemand (Web)">
     Access Sherlock through a web browser with Jupyter, RStudio, VS Code, and terminal:
@@ -89,7 +89,7 @@ Sherlock has **20 login nodes**. When you connect, you'll be automatically assig
 For transferring large files, use the dedicated data transfer nodes (DTNs):
 
 ```bash
-ssh YOUR_SUNETID@dtn.sherlock.stanford.edu
+ssh ianpan@dtn.sherlock.stanford.edu
 ```
 
 Or use tools like `scp`, `rsync`, or Globus pointing to `dtn.sherlock.stanford.edu`.
