--- a/hpc/stanford/using-sherlock/commands-and-troubleshooting.mdx
+++ b/hpc/stanford/using-sherlock/commands-and-troubleshooting.mdx
@@ -213,7 +213,7 @@ Solutions:
   ```
   Host sherlock
       HostName login.sherlock.stanford.edu
-      User YOUR_SUNETID
+      User ianpan
       ServerAliveInterval 60
   ```
 
