--- a/hpc/stanford/using-sherlock/index.mdx
+++ b/hpc/stanford/using-sherlock/index.mdx
@@ -28,10 +28,10 @@ description: Running jobs on Stanford's Sherlock cluster
     Connect via SSH from your terminal:
 
     ```bash
-    ssh YOUR_SUNETID@login.sherlock.stanford.edu
+    ssh ianpan@login.sherlock.stanford.edu
     ```
 
-    Replace `YOUR_SUNETID` with your Stanford SUNet ID. You'll need to authenticate with your password and two-factor authentication.
+    Replace `ianpan` with your Stanford SUNet ID. You'll need to authenticate with your password and two-factor authentication.
   </Tab>
   <Tab title="OnDemand">
     Access the cluster through a web browser with Jupyter, RStudio, VS Code, file browser, and terminal:
