Update documentation text and formatting
- Refine HIVE getting started description and prerequisites wording
- Remove redundant description field and style acknowledgment text in Mac setup index
- Add note about terminal aesthetics in theme guide

--- a/hpc/uc-davis/getting-started-hive.mdx
+++ b/hpc/uc-davis/getting-started-hive.mdx
@@ -1,11 +1,11 @@
 ---
 title: Setting Up Your HIVE Account
-description: Create your HIVE account and configure SSH access for the UC Davis HPC cluster
+description: Create your HIVE account and configure SSH access for HIVE.
 ---
 
 ## Prerequisites
 
-- A UC Davis Kerberos account
+- UC Davis affiliation (Kerberos login required)
 - An SSH key pair (optional but recommended - instructions provided below)
 
 ## Create Your HIVE Account
