Rename index page titles to Overview to reduce nav redundancy
Changes section index titles from repeating the group name to "Overview",
eliminating visual duplication in the sidebar navigation.

--- a/hpc/index.mdx
+++ b/hpc/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: High Performance Computing
+title: Overview
 description: Workflows, tools, and tips for working with HPC clusters
 ---
 
