--- a/hpc/uc-davis/index.mdx
+++ b/hpc/uc-davis/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: HPC at UC Davis
+title: Overview
 description: Resources and guides for using high-performance computing clusters at UC Davis
 ---
 
