--- a/hpc/stanford/index.mdx
+++ b/hpc/stanford/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: HPC at Stanford
+title: Overview
 description: Resources and guides for using the Sherlock high-performance computing cluster at Stanford
 ---
 
