Add Stanford to HPC cluster guides, clean up overview headers
- Add HPC at Stanford card to main HPC overview page
- Remove redundant cluster headers from Stanford and UC Davis overviews

--- a/hpc/index.mdx
+++ b/hpc/index.mdx
@@ -34,4 +34,7 @@ This section covers workflows, tools, and best practices for working with high-p
   <Card title="HPC at UC Davis" icon="building-columns" href="/hpc/uc-davis">
     Setup and usage for UC Davis HIVE cluster
   </Card>
+  <Card title="HPC at Stanford" icon="building-columns" href="/hpc/stanford">
+    Setup and usage for Stanford Sherlock cluster
+  </Card>
 </CardGroup>
