Hide table of contents on overview pages

--- a/hpc/uc-davis/index.mdx
+++ b/hpc/uc-davis/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Overview
 description: Resources and guides for using high-performance computing clusters at UC Davis
+toc: false
 ---
 
 HIVE is UC Davis's primary HPC resource, featuring ~80 CPU nodes with over 7,800 cores, 12 GPUs (NVIDIA A100 and A6000), and 5.7 PB of Quobyte storage. It runs SLURM for job scheduling.
