--- a/index.mdx
+++ b/index.mdx
@@ -2,6 +2,7 @@
 title: Welcome
 description: Personal documentation for bioinformatics, HPC, and computational biology workflows
 mode: center
+toc: false
 ---
 
 # Welcome to Ian's Docs
