--- a/hpc/index.mdx
+++ b/hpc/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Overview
 description: Workflows, tools, and tips for working with HPC clusters
+toc: false
 ---
 
 This section covers workflows, tools, and best practices for working with high-performance computing clusters. These guides apply to SLURM-based clusters generally—see the UC Davis section for cluster-specific details.
