Use descriptive titles for nested overview pages
- Rename overview pages to show context in next/prev navigation
- Remove redundant intro text from HPC overview

--- a/hpc/stanford/index.mdx
+++ b/hpc/stanford/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: HPC at Stanford
 description: Resources and guides for using the Sherlock high-performance computing cluster at Stanford
 toc: false
 ---
