--- a/hpc/uc-davis/index.mdx
+++ b/hpc/uc-davis/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: HPC at UC Davis
 description: Resources and guides for using high-performance computing clusters at UC Davis
 toc: false
 ---
