Fix Changelog tab navigation, add Sherlock outdated warning
- Use proper groups/pages structure for Changelog tab
- Add warning that Stanford HPC docs may be outdated since 2022

--- a/hpc/stanford/index.mdx
+++ b/hpc/stanford/index.mdx
@@ -6,6 +6,10 @@ toc: false
 
 Sherlock is Stanford's primary shared HPC resource, operated by the Stanford Research Computing Center (SRCC). It features over 74,000 CPU cores, 1,100+ GPUs across multiple generations (H100, A100, L40S, V100), and petabytes of high-performance storage.
 
+<Warning>
+I haven't had access to Sherlock since 2022 and these docs may be outdated. YMMV.
+</Warning>
+
 <CardGroup cols={2}>
   <Card title="Getting Started with Sherlock" icon="user-plus" href="/hpc/stanford/getting-started-sherlock">
     Request an account and connect to Sherlock
