Clean up changelog page, hide redundant navigation

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,9 +1,7 @@
 ---
 title: Changelog
 description: Recent updates to the documentation
+hideSidebar: true
+toc: false
 ---
-
-# Changelog
-
-Recent updates and changes to the documentation.
 
